; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_moduleUnregisterSharedAPI.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_moduleUnregisterSharedAPI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32* }

@server = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @moduleUnregisterSharedAPI(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 4
  %9 = call i32* @dictGetSafeIterator(i32 %8)
  store i32* %9, i32** %4, align 8
  br label %10

10:                                               ; preds = %32, %1
  %11 = load i32*, i32** %4, align 8
  %12 = call i32* @dictNext(i32* %11)
  store i32* %12, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %33

14:                                               ; preds = %10
  %15 = load i32*, i32** %5, align 8
  %16 = call i8* @dictGetKey(i32* %15)
  store i8* %16, i8** %6, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = call %struct.TYPE_5__* @dictGetVal(i32* %17)
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %7, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i32*, i32** %2, align 8
  %23 = icmp eq i32* %21, %22
  br i1 %23, label %24, label %32

24:                                               ; preds = %14
  %25 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i32 @dictDelete(i32 %25, i8* %26)
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %29 = call i32 @zfree(%struct.TYPE_5__* %28)
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %24, %14
  br label %10

33:                                               ; preds = %10
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @dictReleaseIterator(i32* %34)
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32* @dictGetSafeIterator(i32) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local i8* @dictGetKey(i32*) #1

declare dso_local %struct.TYPE_5__* @dictGetVal(i32*) #1

declare dso_local i32 @dictDelete(i32, i8*) #1

declare dso_local i32 @zfree(%struct.TYPE_5__*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
